# parlo-license-manager

./: .gitignore  COMPLETE_IMPLEMENTATION.md  FRAPPE_INTEGRATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  INSTALLATION.md  MIGRATION_GUIDE.md  ORGANIZATION_ASSIGNMENT_FIX.md  README.md  SETUP_AND_NAVIGATION.md  USAGE_GUIDE.md  license.txt  pyproject.toml  requirements.txt  setup.py
parlo_license_manager/: hooks.py  install.py  modules.txt  patches.txt  permissions.py
parlo_license_manager/api/: __init__.py  million_verifier.py  parlo_integration.py
parlo_license_manager/config/: desktop.py  docs.py
parlo_license_manager/parlo_license_manager/: __init__.py
parlo_license_manager/parlo_license_manager/doctype/organization/: organization.json  organization.py  test_organization.py
parlo_license_manager/parlo_license_manager/doctype/organization_admin_user/: organization_admin_user.json  organization_admin_user.py
parlo_license_manager/parlo_license_manager/doctype/organization_license/: organization_license.json  organization_license.py
parlo_license_manager/parlo_license_manager/doctype/parlo_settings/: parlo_settings.json  (+1 more)
parlo_license_manager/patches/: migrate_from_organization_license.py
parlo_license_manager/public/css/: parlo_license_manager.css
parlo_license_manager/public/js/: parlo_license_manager.js
parlo_license_manager/templates/: base.html
parlo_license_manager/utils/: __init__.py  bulk_upload.py  license_generator.py  organization.py
parlo_license_manager/www/: parlo_auth.html  parlo_auth.py  parlo_dashboard.html  parlo_dashboard.py
(+5 files in other folders)
