[project]
name = "parlo_license_manager"
authors = [
    { name = "Parlo", email = "admin@parlo.com" }
]
description = "Parlo License Management System for Organizations"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    "requests",
    "openpyxl",
    "pandas"
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.bench.dev-dependencies]
